# OpenGLLearning

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opengllearning/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/opengllearning/: CMakeLists.txt  MainActivity.kt
app/src/main/java/com/example/opengllearning/Tutorial01/: CMakeLists.txt  FirstApplication.kt  NativeLibrary.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/opengllearning/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
